[package]
name = "bevy_tiling_background"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "render"] }

[dev-dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "render", "bevy_winit", "png"] }