[package]
name = "bevy_tiling_background"
version = "0.9.2"
edition = "2021"
authors = ["Cayle Bray", "Paul Hansen"]
description = "A plugin to make tiling, layered, and parallax backgrounds for bevy2D"
keywords = ["bevy", "2D", "graphics", "gamedev"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_tiling_background"
readme = "README.md"
repository = "https://github.com/Braymatter/bevy_tiling_background"
homepage = "https://github.com/Braymatter/bevy_tiling_background"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "render"] }
lazy_static = "1.4.0"

[dev-dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "render", "bevy_winit", "png"] }